--- a/index.html
+++ b/index.html
@@ -4,27 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson_8</title>
+    <title>Homework_8</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Lesson 8</h1>
-    <span>Hello World!</span>
-    <div class="wrapper">
-        <div>Hello World!</div>
-        <p>Hello World!</p>
-        <div>Hello World!</div>
-    </div>
+    <body>
+    <h1 class="border">Oleksandr Lonchar</h1> 
+    <img src="photo_2023-05-15_13-52-26.jpg" width="300" height="350" alt="My photo">
+    <p class="border">Front-End Developer</p>
+    <u><p class="border">Work experience</p></u>
+    <br>
+    <table border="1">
+        <thead>
+            <tr>
+                <th rowspan="2"><strong class="th">Period</strong></th>
+                <th><strong class="th">Position</strong></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>2014-present</td>
+                <td>Student at <a href="https://school52.pro4.com.ua">school 52</a></td>
+            </tr>
+            <tr>
+                <td>item</td>
+                <td>item <a href="https://ru.wikipedia.org/wiki/Заглавная_страница">Wikipedia</a></td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>item</td>
+                <td>item <a href="https://translate.google.com/?hl=ru&tab=TT">Google Translate</a></td>
+            </tr>
+        </tfoot>
+    </table>
+    <br>
+    <u><p class="border">Skills:</p></u>
+    <strong>
     <ul>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
-    </ul>
-    <div class="width-params">
-        Hello World!
-    </div>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Python</li>
+   </ul>
+   </strong>
 </body>
 </html>
