--- a/index.html
+++ b/index.html
@@ -4,27 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson_8</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Lesson 9</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <h1>Lesson 8</h1>
-    <span>Hello World!</span>
-    <div class="wrapper">
-        <div>Hello World!</div>
-        <p>Hello World!</p>
-        <div>Hello World!</div>
+    <div class="head">
+        <h1 class="border">Oleksandr Lonchar</h1> 
+        <span><img class="img" src="photo_2023-05-15_13-52-26.jpg" width="300" height="350" alt="My photo"></span>
+        <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+        <p class="border-one">Front-End Developer</p>
     </div>
-    <ul>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
-    </ul>
-    <div class="width-params">
-        Hello World!
+    <u><p class="experience">Work experience</p></u>
+    <br>
+    <div class="table">
+        <table border="1">
+            <thead>
+                <tr>
+                    <th><strong class="th">Period</strong></th>
+                    <th><strong class="th">Position</strong></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>2014-present</td>
+                    <td>Student at <a href="https://school52.pro4.com.ua">school 52</a></td>
+                </tr>
+                <tr>
+                    <td>item</td>
+                    <td>item <a href="https://ru.wikipedia.org/wiki/Заглавная_страница">Wikipedia</a></td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td>item</td>
+                    <td>item <a href="https://translate.google.com/?hl=ru&tab=TT">Google Translate</a></td>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
+    <br>
+    <div class="skills">
+        <u><p class="border-two">Skills:</p></u>
+        <strong>
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Python</li>
+       </ul>
+       </strong>
     </div>
 </body>
 </html>
